# sale-report-analysis

./: .gitignore  MEMORY_ISSUES.md  README.md  metadata.json  package-lock.json  package.json
server/: .env.example  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
server/config/: database.py  database.yaml  llm.py  llm_config.yaml
server/data/: 售前交流台账.xlsx
server/migrations/: 001_update_group_info_lead_fields.sql  002_crm_lead.sql  003_crm_report.sql  004_msg_template.sql  005_sys_dict_type.sql  006_sys_dict_item.sql  007_sys_dict_init_data.sql  008_grp_fixed_member.sql  init.sql  update_member_names.sql
server/models/: __init__.py  crm_lead.py  crm_report.py  group_info.py  group_member.py  group_msg_stat.py  grp_fixed_member.py  msg_marked.py  msg_raw.py  msg_template.py  person_stats.py  sys_dict_item.py  sys_dict_type.py  video_stage.py
server/modules/: stage_detector.py
server/modules/excel/: importer.py  msg_parser.py
server/modules/llm/: analyzer.py  client.py  prompts.py
server/modules/participant/: matcher.py
server/routers/: __init__.py  analysis_api.py  group_api.py  group_crud_api.py  import_api.py  stats_api.py
server/routers/admin/: dicts.py  fixed_members.py  groups.py  members.py  message_groups.py  (+2 more)
server/schemas/: __init__.py  common.py
server/services/: analysis_service.py  import_service.py  stats_service.py
server/test/: batch_analysis.py  fixed_members_test_data.csv  leads_test_data.csv  reports_test_data.csv  step_by_step.py  test_fixed_member_import.py  test_lead_import.py  test_report_import.py
(+61 files in other folders)
