[project]
name = "sale-report-analysis-server"
version = "1.0.0"
description = "群消息分析系统 FastAPI 服务"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",
    "sqlalchemy==2.0.35",
    "pymysql==1.1.1",
    "openpyxl==3.1.5",
    "aiofiles==24.1.0",
    "python-multipart==0.0.12",
    "pydantic==2.9.0",
    "pandas==2.2.2",
    "openai>=1.0.0",
    "pyyaml==6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
